# feather-m0-neopixel-firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  circle.yml  config.cmake
cmake/: samd-arduino-toolchain.cmake
cmake/modules/: clang-format.cmake
cmake/target-boards/: adafruit-feather-m0-basic.cmake  cortex-m0-plus.cmake
sketches/starter/: CMakeLists.txt  main.cpp
